# ArucoMarker

./: CMakeLists.txt  detect.py  generator.cpp
